--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -7,8 +7,6 @@
     align-items: $align;
     justify-content: $justify;
     flex-direction: $direction;
-
-    flex-wrap: $wrap;
 }
 
 // FONTS
